Fix build failure on java 8